[package]
name = "incomplete"
version = "0.1.3"

description = "Provides incomplete!(), a compile-time checked version of unimplemented!()"
readme = "README.md"

authors = ["Jon Gjengset <jon@thesquareplanet.com>"]

documentation = "https://docs.rs/incomplete"
homepage = "https://github.com/jonhoo/incomplete"
repository = "https://github.com/jonhoo/incomplete.git"

keywords = ["macro","unimplemented"]
categories = ["development-tools", "rust-patterns"]

license = "MIT/Apache-2.0"

[badges]
maintenance = { status = "as-is" }

[dependencies]
